--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
@@ -16,7 +17,6 @@
                 <div class="logo-icon">
                     <img src="assets/icons/logo-2.png" alt="Logo">
                 </div>
-                <span></span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -37,7 +37,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#historia">Nossa História</a></li>
-                            <li><a class="dropdown-item" href="#missao">Professores</a></li>
+                            <li><a class="dropdown-item" href="pages/professores.html">Professores</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-     <section class="cards-section">
+    <section class="cards-section">
         <div class="container">
             <h2 class="text-center mb-5">Nossos diferenciais</h2>
             <div class="row g-4">
@@ -177,7 +177,7 @@
                     <div class="card info-card">
                         <div class="card-body text-center">
                             <img src="assets/icons/icons8-professor-50.png">
-                            <h5 class="card-title">Suporte especializado</h5>
+                            <h5 id="text-bg" class="card-title">Suporte especializado</h5>
                             <p class="card-text">Atendimento disponível para tirar suas dúvidas a qualquer momento.</p>
                         </div>
                     </div>
@@ -211,13 +211,14 @@
                 <div class="logo-icon">
                     <img src="assets/icons/logo-2.png" alt="Logo">
                 </div>
-                <span></span>
             </a>
         </div>
         <p class="mb-4">Nossa missão é transformar vidas!</p>
-        
+            <a class="icon-footer" href="http://"><img src="assets/icons/icons8-instagram-50.png"></a>
+            <a class="icon-footer" href="http://"><img src="assets/icons/icons8-youtube-50.png"></a>
+            <a class="icon-footer" href="http://"><img src="assets/icons/icons8-whatsapp-50.png"></a>
             <hr style="border-color: rgba(255,255,255,0.2);">
-            <p class="mb-0">&copy; 2024 EduLearn. Todos os direitos reservados.</p>
+            <p class="mb-0">&copy; 2026 DC Concursos. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
