deleted:    assets/icons/logo-2.png 	modified:   assets/icons/logo.png 	modified:   css/style-curso-pmal.css 	modified:   css/style.css 	modified:   index.html 	modified:   pages/curso-pmal.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,11 +18,11 @@
                 <img src="assets/icons/icons8-menu-50.png" width="25px" height="25px">
                 <span class="menu-button">Menu</span>
             </button>
-
+            
             <div class="collapse navbar-collapse" id="navbarNav">
                 <a href="/index.html" class="logo">
                     <div class="logo-icon">
-                        <img src="assets/icons/logo-2.png" alt="Logo">
+                        <img src="assets/icons/logo.png" alt="Logo">
                     </div>
                 </a>
 
@@ -43,7 +44,7 @@
                             Cursos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#historia">PM-AL</a></li>
+                            <li><a class="dropdown-item" href="pages/curso-pmal.html">PM-AL</a></li>
                             <li><a class="dropdown-item" href="#missao">PM-PE</a></li>
                             <li><a class="dropdown-item" href="#missao">PC-AL</a></li>
                             <li><a class="dropdown-item" href="#missao">GCM-MACEIÓ</a></li>
@@ -85,7 +86,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="http://"><img src="assets/img/banner-pmal-279.jpg" alt="PMAL"></a>
+                <a href="pages/curso-pmal.html"><img src="assets/img/banner-pmal-279.jpg" alt="PMAL"></a>
             </div>
             <div class="carousel-item">
                 <a href="http://"><img src="assets/img/banner-pcal-279.jpg" alt="PCAL"></a>
@@ -131,22 +132,22 @@
         <div class="container">
             <h2 class="text-center mb-5">Cursos em destaque</h2>
             <div id="cards-center" class="row g-4">
-                <div class="col-md-7 col-lg-2">
+                <div class="col-md-6 col-lg-3">
                     <div class="card">
                        <a href="pages/curso-pmal.html"> <img src="assets/img/curso-pmal.png" alt="pmal"></a>
                     </div>
                 </div>
-                <div class="col-md-7 col-lg-2">
+                <div class="col-md-6 col-lg-3">
                     <div class="card">
                         <a href="http://"><img src="assets/img/curso-cbmal.png" alt="cbmal"></a>
                     </div>
                 </div>
-                <div class="col-md-7 col-lg-2">
+                <div class="col-md-6 col-lg-3">
                     <div class="card">
                         <a href="http://"><img src="assets/img/curso-gcm-mcz.png" alt="gcm-mcz"></a>
                     </div>
                 </div>
-                <div class="col-md-7 col-lg-2">
+                <div class="col-md-6 col-lg-3">
                     <div class="card">
                        <a href="http://"> <img src="assets/img/curso-pcal.png" alt="pcal"></a>
                     </div>
@@ -159,7 +160,6 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="mb-3">Visão, Missão e Valores</h2>
-                <p class="text-muted lead">Princípios que guiam cada decisão e ação</p>
             </div>
 
             <div class="row g-4">
@@ -203,11 +203,11 @@
         </div>
     </section>
 
-<footer>
-    <div class="container text-center">
-        <div id="logo-footer" class="container">
+    <footer>
+        <div class="container text-center">
+            <div id="logo-footer" class="container">
                 <div class="logo-icon">
-                    <img src="assets/icons/logo-2.png" alt="Logo">
+                    <img src="assets/icons/logo.png" alt="Logo">
                 </div>
         </div>
         <p class="mb-4">Nossa missão é transformar vidas!</p>
