--- a/pages/curso-pmal.html
+++ b/pages/curso-pmal.html
@@ -118,11 +118,105 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/assets/img/curso-pmal.jpg" alt="Programação" style="width: 100%; border-radius: 20px; box-shadow: 0 20px 60px rgba(74, 144, 226, 0.3);">
+                    <img src="/assets/img/curso-pmal.jpg" alt="Programação" style="width: 80%; border-radius: 20px; box-shadow: 0 20px 60px rgba(74, 144, 226, 0.3);">
                 </div>
             </div>
         </div>
     </section>
+
+     <section class="learn-section">
+        <div class="container">
+            <h2 class="section-title">O Que Você Vai Aprender</h2>
+            <div class="row">
+                <div class="col-md-6 col-lg-3">
+                    <div class="learn-card">
+                        <i class="bi bi-code-slash"></i>
+                        <h3>Fundamentos</h3>
+                        <p>Variáveis, tipos de dados, estruturas de controle e funções.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="learn-card">
+                        <i class="bi bi-database-fill"></i>
+                        <h3>Banco de Dados</h3>
+                        <p>SQL, SQLite e integração com aplicações Python.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="learn-card">
+                        <i class="bi bi-graph-up"></i>
+                        <h3>Data Science</h3>
+                        <p>Pandas, NumPy e visualização de dados.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="learn-card">
+                        <i class="bi bi-globe"></i>
+                        <h3>Web Development</h3>
+                        <p>Flask, Django e APIs REST.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="modules-section">
+        <div class="container">
+            <h2 class="section-title">Módulos do Curso</h2>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 1</div>
+                        <div class="module-title">Língua Portuguesa</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 2</div>
+                        <div class="module-title">Noções de Informática</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 3</div>
+                        <div class="module-title">Matemática</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 4</div>
+                        <div class="module-title">História Geral, Brasil e Alagoas</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 5</div>
+                        <div class="module-title">Geografia Geral, Brasil e Alagoas</div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 5</div>
+                        <div class="module-title">Legislação pertinente ao Policial Militar de Alagoas</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 6</div>
+                        <div class="module-title">Noções de Direito Administrativo</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 7</div>
+                        <div class="module-title">Noções de Direito Constitucional</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 8</div>
+                        <div class="module-title">Noções de Direito Penal</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 9</div>
+                        <div class="module-title">Noções de Processual Penal</div>
+                    </div>
+                    <div class="module-item">
+                        <div class="module-number">MÓDULO 10</div>
+                        <div class="module-title">Noções de Direitos Humanos</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="cards-section">
         <div class="container">
