modified:   css/style-curso-pmal.css 	modified:   pages/curso-pmal.html

--- a/pages/curso-pmal.html
+++ b/pages/curso-pmal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <a href="/index.html" class="logo">
                     <div class="logo-icon">
-                        <img src="/assets/icons/logo-2.png" alt="Logo">
+                        <img src="/assets/icons/logo.png" alt="Logo">
                     </div>
                 </a>
 
@@ -97,23 +98,22 @@
                         <div class="hero-features">
                             <div class="hero-feature">
                                 <i class="bi bi-clock-fill"></i>
-                                <span>365 dias de conteúdo</span>
+                                <span class="span-header">365 dias de conteúdo</span>
                             </div>
                             <div class="hero-feature">
                                 <i class="bi bi-play-circle-fill"></i>
-                                <span>150+ videoaulas</span>
+                                <span class="span-header">150+ videoaulas</span>
                             </div>
                             <div class="hero-feature">
                                 <i class="bi bi-file-code-fill"></i>
-                                <span>50+ Materiais práticos</span>
+                                <span class="span-header">50+ Materiais práticos</span>
                             </div>
                         </div>
 
                         <a href="#comprar" class="btn-cta">COMEÇAR AGORA</a>
                         
                         <div class="price-tag">
-                            <span class="price-old">R$ 997</span>
-                            <span class="price-new">R$ 297</span>
+                            <span class="price-new">R$ 297,00</span>
                         </div>
                     </div>
                 </div>
@@ -126,20 +126,20 @@
 
      <section class="learn-section">
         <div class="container">
-            <h2 class="section-title">O Que Você Vai Aprender</h2>
+            <h2 class="section-title">Nossos diferenciais</h2>
             <div class="row">
                 <div class="col-md-6 col-lg-3">
                     <div class="learn-card">
                         <i class="bi bi-code-slash"></i>
-                        <h3>Fundamentos</h3>
-                        <p>Variáveis, tipos de dados, estruturas de controle e funções.</p>
+                        <h4>Simulados e Questões</h4>
+                        <p>Tenha acesso a um cronograma estratégico de estudos.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="learn-card">
                         <i class="bi bi-database-fill"></i>
-                        <h3>Banco de Dados</h3>
-                        <p>SQL, SQLite e integração com aplicações Python.</p>
+                        <h4>Suporte especializados</h4>
+                        <p>Atendimento disponível para tirar suas dúvidas a qualquer momento.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
